# agentry

./: .gitignore  Draft spec for pk CLI tool.md  Makefile  README.md  aider.Definitionfile  exchanged-objects.html  fedora.Definitionfile  opencode.Definitionfile  pyproject.toml  requirements.txt
apptainers/: fedora.Definitionfile  opencode-partial.Definitionfile  opencode.Definitionfile  python3.14.Definitionfile
libden/pk/: __main__.py  client.py  helpers.py  index.html  server.py  webauthn_tool.py
test/: conftest.py  keylist-mostly-empty.toml  keylist-test.toml  libden  pk-create-credential.sh  pk-login.sh  pk-register.sh  pkserver-empty.toml  pkserver-mostly-empty.toml  pkserver-test-once.toml  pkserver-test-timing.toml  pkserver-test.toml  pkserver.toml  test-user.pem  test_server.py  unregistered-2.pem  unregistered.pem  Слава Україні!.pem  初音ミク.pem
